# nxr_baxter

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  package.xml
bags/: 2014-06-16-14-18-00.bag
config/: block_measurements.txt  frames.gv
include/: ARBlock.h  ARWorldBuilder.h  ar_block.h
include/nxr_baxter/: ARBlock.h  ARWorldBuilder.h
launch/: moveit_sim.launch  startup.launch
src/: '  .alvar_rectifier.py.swp  .moveit_ar_environment.cpp.backup  ARBlock.cpp  ARWorldBuilder.cpp  alvar_target.py  alvar_tracker_head.py  ar_block.cpp  block_stacking.py  moveit_ar_environment.cpp  moveit_test.py  moveit_test_0.cpp  moveit_test_00.cpp  moveit_test_1.cpp  moveit_test_2.cpp  moveit_test_3.cpp  webcam_video_publisher.cpp
src/nxr_baxter/: alvar_rectifier.py  alvar_target.py  block_stacking.py  cartesian_topic.py  info_topic.py  webcam_topic.py
yaml/: baxter_urdf.yaml  default_marker.yaml  paramter_server.yaml  sample_marker.yaml
