<?xml version="1.0"?>
<package>
  <name>nxr_baxter</name>
  <version>0.0.1</version>
  <description>
    This is a package that has Baxter scripts developed at NU.
  </description>

  <maintainer email="jonathanrovira2016@u.northwestern.edu">Jon Rovira</maintainer>
  <author email="jonathanrovira2016@u.northwestern.edu">Jon Rovira</author>
  <author email="kylelueptow@gmail.com">Kyle Lueptow</author>
  <license>BSD</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <!--Build_depends-->
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>actionlib</build_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>shape_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>baxter_core_msgs</build_depend>
  <build_depend>skeletonmsgs_nu</build_depend>
  <build_depend>nxr_baxter_msgs</build_depend>

  <build_depend>baxter_interface</build_depend>
  <build_depend>utilities</build_depend>

	<build_depend>moveit_commander</build_depend>
	<build_depend>moveit_core</build_depend>
	<!-- <build_depend>moveit_full</build_depend> -->
	<build_depend>moveit_msgs</build_depend>
	<!-- <build_depend>moveit_planners</build_depend> -->
	<build_depend>moveit_planners_ompl</build_depend>
	<!-- <build_depend>moveit_plugins</build_depend> -->
	<!-- <build_depend>moveit_ros</build_depend> -->
	<build_depend>moveit_ros_benchmarks</build_depend>
	<build_depend>moveit_ros_benchmarks_gui</build_depend>
	<build_depend>moveit_ros_manipulation</build_depend>
	<build_depend>moveit_ros_move_group</build_depend>
	<build_depend>moveit_ros_perception</build_depend>
	<build_depend>moveit_ros_planning</build_depend>
	<build_depend>moveit_ros_planning_interface</build_depend>
	<build_depend>moveit_ros_robot_interaction</build_depend>
	<build_depend>moveit_ros_visualization</build_depend>
	<build_depend>moveit_ros_warehouse</build_depend>
	<build_depend>moveit_setup_assistant</build_depend>
	<build_depend>moveit_simple_controller_manager</build_depend>
  
	<build_depend>tf</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <!---->

  <!--Run_depends-->
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>actionlib</run_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>shape_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>baxter_core_msgs</run_depend>
  <run_depend>skeletonmsgs_nu</run_depend>
  <run_depend>nxr_baxter_msgs</run_depend>

  <run_depend>baxter_interface</run_depend>
	<run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>utilities</run_depend>

	<run_depend>moveit_commander</run_depend>
	<run_depend>moveit_core</run_depend>
	<!-- <run_depend>moveit_full</run_depend> -->
	<run_depend>moveit_msgs</run_depend>
	<!-- <run_depend>moveit_planners</run_depend> -->
	<run_depend>moveit_planners_ompl</run_depend>
	<!-- <run_depend>moveit_plugins</run_depend> -->
	<!-- <run_depend>moveit_ros</run_depend> -->
	<run_depend>moveit_ros_benchmarks</run_depend>
	<run_depend>moveit_ros_benchmarks_gui</run_depend>
	<run_depend>moveit_ros_manipulation</run_depend>
	<run_depend>moveit_ros_move_group</run_depend>
	<run_depend>moveit_ros_perception</run_depend>
	<run_depend>moveit_ros_planning</run_depend>
	<run_depend>moveit_ros_planning_interface</run_depend>
	<run_depend>moveit_ros_robot_interaction</run_depend>
	<run_depend>moveit_ros_visualization</run_depend>
	<run_depend>moveit_ros_warehouse</run_depend>
	<run_depend>moveit_setup_assistant</run_depend>
	<run_depend>moveit_simple_controller_manager</run_depend>

  <run_depend>tf</run_depend>
	<run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <!---->

  <!---->

</package>
